--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
-    <title>Babushka</title>
+    <title>Bistro Babushka</title>
     <style>
         body {
-            background-color: rgb(240, 240, 240);
+            background-color: red;
+        }
+
+        nav {
+            text-align: center;
         }
 
         article {
@@ -20,20 +26,61 @@
         .data-container {
             margin: 0 auto;
             display: grid;
+            grid-gap: 5px;
         }
 
-        @media screen and (min-width:580px) {
+        .banner img {
+            width: 100%;
+        }
+
+        .banner {
+            text-align: center;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        @media screen and (min-width:600px) {
+
+            .banner {
+                font-size: 2em;
+            }
+
             .data-container {
                 padding-left: 10%;
                 padding-right: 10%;
-                grid-gap: 5px;
                 grid-template-columns: repeat(3, 1fr);
+            }
+        }
+        @media screen and (min-width:1000px) {
+            .banner {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+            }
+            .banner h1 {
+                grid-column: 3;
+            }
+            .banner .img2 {
+                grid-column: 5;
+            }
+        }
+        @media screen and (min-width:1200px) {
+            .data-container {
+                grid-template-columns: repeat(4, 1fr);
             }
         }
     </style>
 </head>
 
 <body>
+    <div class="banner">
+        <img src="babushka.png" alt="babushka">
+        <h1>Bistro <br> Babushka</h1>
+        <div class="img2">
+            <img src="babushka.png" alt="babushka">
+        </div>
+
+    </div>
+
     <header>
         <nav>
             <button class="menu-item" data-kategori="alle">Hele menuen</button>
@@ -88,6 +135,9 @@
                     //indsæt data i klonen
                     klon.querySelector("h2").textContent = mad.navn;
                     klon.querySelector("img").src = mad.billede;
+                    klon.querySelector("img").addEventListener("click", () => {
+                        window.location.href = "single.html?id=" + mad.id;
+                    });
                     klon.querySelector(".data-kortbeskrivelse").textContent = mad.kortbeskrivelse;
                     klon.querySelector(".data-pris").textContent = mad.pris;
                     //placer klon i DOM
