--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             }
         }
         @media screen and (min-width:1200px) {
+            .banner {
+                font-size: 3em;
+            }
             .data-container {
                 grid-template-columns: repeat(4, 1fr);
             }
