--- a/single.html
+++ b/single.html
@@ -66,6 +66,11 @@
                 grid-column: 5;
             }
         }
+        @media screen and (min-width:1200px) {
+            .banner {
+                font-size: 3em;
+            }
+        }
     </style>
 </head>
 
